v12/fixtures/ast/errors/result_error_accessors/source.able
struct ChannelClosed {

}
struct ChannelNil {

}
struct ChannelSendOnClosed {

}
failure_description := do {
  __able_channel_close(0)
  "ok"
} rescue {
  case err: Error => err
}! or {
  err =>
  payload := err.value
  payload_tag := (payload match {
    case ChannelNil {  } => "ChannelNil",
    case ChannelClosed {  } => "ChannelClosed",
    case ChannelSendOnClosed {  } => "ChannelSendOnClosed",
    case _ => "Unknown"
  })
  cause := err.cause()
  cause_tag := (cause match {
    case inner: Error => "cause",
    case _ => "nil"
  })
  `${err.message()}|${payload_tag}|${cause_tag}`
}
failure_description
